edit products page and add pagenation

--- a/public/assets/store/css/style.css
+++ b/public/assets/store/css/style.css
@@ -8164,3 +8164,8 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     padding-left: 100px; }
 
   /*# sourceMappingURL=style.css.map */
+
+.quantity-details input{
+    background-color: #fff;
+    border: 1px solid #aeaeae;
+}
